--- a/app/single-find.html
+++ b/app/single-find.html
@@ -19,7 +19,7 @@
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
-	<link rel="stylesheet" href="css/main.min.css?v=1.9">
+	<link rel="stylesheet" href="css/main.min.css?v=1.22">
 
 </head>
 
@@ -76,77 +76,114 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Сегодня мы поделимся с вами базовой информацией по выбору товара для продажи на Amazon по стратегии Private Label. Выбор товара - это "фундамент" продаж на Amazon, и от этого "фундамента" будут зависеть все ваши дальнейшие результаты по работе с Amazon. Кстати, качественный поиск товара легко может занимать до нескольких недель времени, поэтому не торопитесь с этим вопросом, т.к. товар вы выбираете на долгосрочную перспективу, и пара лишних недель на старте ничего не решат.</p>
+				<p>Сегодня мы поделимся с вами базовой информацией по выбору товара для продажи на Amazon. Выбор товара - это "фундамент"
+				продаж на Amazon, и от этого "фундамента" будут зависеть все ваши дальнейшие результаты по работе на Amazon. Главное,
+				что нужно понимать про выбор товара – это то, что товар нужно выбирать не с помощью своей интуиции, а с помощью
+				аналитики, сбора статистики, умения пользоваться аналитическими программами, а также благодаря просчету всех показателей
+				и умению прогнозировать продажи.</p>
 
-				<h2>Что будет, если пренебречь правилами и не проверить товар по всем необходимым метрикам или упустить какой-то показатель из виду?!</h2>
+				<p>Многие начинающие продавцы на Amazon ищут товар по следующей логике. Они думают, “так, у меня есть знакомый в Китае,
+				который продает к примеру кастрюли, я их выгодно у него закуплю и продам на Amazon” Это фатальная ошибка! Так вы 100%
+				потеряете деньги и окажитесь в огромном минусе! Не вздумайте так делать! Так же не надо выбирать товар основываясь на
+				свою интуицию, и не надо сравнивать товары с рынков России и США и думать “раз в России такой товар покупают, то в США
+				тоже купят, там же спрос больше и денег у людей больше”! Это ещё одна фатальная ошибка. Рынки абсолютно разные и
+				сравнивать их нет никакого смысла! И не нужно выбирать товар, основываясь на своей личной симпатии. Многие почему-то
+				считают, что если они зайдут на алиэкспресс и выберут что-то, что нужно им, то это захотят купить и остальные! Так это
+				тоже не работает! Запомните, пожалуйста, Товар нужно выбирать, основываясь только на цифры и на аналитику, и никак
+				иначе.</p>
 
-				<p>Варианта всего три:</p>
+				<p>Для Amazon создано много аналитических программ, с помощью которых вы можете выбрать узнать практически всё, что вам
+				нужно. Вы можете узнать, сколько продаж у того или иного конкурента, можете узнать спрос на товар, можете узнать бест
+				селлер ранг (бест селлер ранг - это порядковый номер магазина в категории, чем ниже этот показатель, тем выше магазин в
+				выдаче, тем лучше продаже, то есть грубо говоря, это индикатор уровня продаж). Так же можно узнать конкуренцию, можно
+				узнать выручку конкурентов, можно узнать изменение спроса со временем, можно узнать стоимость рекламы, можно узнать
+				вообще всё что угодно, можно даже посчитать, сколько зарабатывают ваши конкуренты. Поэтому и нужно выбирать товар именно
+				на основе аналитики, т.к. с помощью программ вам доступны все данные по выбору товара, вам открыта вся статистика на
+				Amazon! И с помощью программ вы можете точно выбрать товар, который будет продаваться! Вы вводите в программу аналитики
+				нужные вам параметры, и для вас подбираются подходящие под заданные параметры товары.</p>
+
+				<p>Почему выбор товара - это так важно? Потому что выбор товара - это тяжелая аналитическая работа, которая требует
+				огромного количества знаний. Вам нужно просчитать все до мелочей, вам нужно спрогнозировать продажи, вам нужно
+				спрогнозировать продвижение товара на Amazon, вам нужно составить финансовую модель. Вся дальнейшая работа, которую
+				нужно сделать после выбора товара, это просто дело навыков.</p>
+
+				<p>Кстати, качественный поиск товара легко может занимать до пары месяцев времени, поэтому не торопитесь с этим вопросом,
+				т.к. товар вы выбираете на долгосрочную перспективу, и пара лишних недель на старте ничего не решат.</p>
+
+				<p>Нас часто спрашивают — какие риски в бизнесе на Amazon? Так вот неправильный выбор товара — это и есть ваш самый главный
+				риск, который может испортить вам всю вашу работу на Amazon. Можно вложить кучу денег в плохой товар и не получить
+				результат, а можно выбрать крутой товар, и раскрутиться даже с небольшого бюджета. Ниже приведем пример, как нужно
+				ориентироваться на цифры. На самом деле ничего сложного в поиске товара нет, если вы просто знаете технологии поиска.</p>
+
+				<p>Итак, вот пример одного перспективного товара, на картинках ниже вы сможете увидеть скришоты из программ аналитики.</p>
+
+				<p>Критерии хорошего продукта:</p>
 
 				<ul>
-					<li>Вам чудом повезет, и всё таки попадется хороший товар (вероятность такого развития событий я думаю примерно 10% и то, если только вы проверили товар по большинству метрик, и упустили из внимания лишь некоторые показатели);</li>
-					<li>Товар будет «средненький» и вы сработаете в ноль и потратите несколько месяцев личного времени на продажу товара (вероятность 40%);</li>
-					<li>Товар не зайдет и вы потеряете часть своих денег (вероятность 50%).</li>
+					<li>низкая себестоимость товара с доставкой до США (желательно менее 20% от конечной стоимости товара);</li>
+					<li>большой спрос на Amazon (более 300 000 потенциальных клиентов в месяц);</li>
+					<li>сравнительно небольшое кол-во конкурентов (желательно до 30);</li>
+					<li>большой объём продаж у конкурентов (от 20 продаж в день в среднем;</li>
+					<li>маленькое количество отзывов у конкурентов (до 500 отзывов в среднем);</li>
+					<li>доход у конкурентов от 500 долларов в день в среднем;</li>
+					<li>популярность товара идёт вверх или находится на хорошем уровне запросов в месяц;</li>
 				</ul>
 
-				<h2>Вывод: нужно грамотно выбирать товар.</h2>
+				<p>Вот по таким критериям мы первоначально выбираем товар. Если товар соответствует данным критериям, то мы делаем
+				углубленный анализ, и решаем, стоит вкладываться в эту нишу или нет.</p>
 
-				<blockquote>Кстати, нас часто спрашивают — какие риски в бизнесе на Amazon?! Так вот неправильный выбор товара — это и есть самый главный риск, который может испортить вам всю вашу работу на Amazon. Можно вложить кучу денег в плохой товар и не получить результат, а можно выбрать крутой товар, и раскрутиться даже с небольшого бюджета.</blockquote>
+				<p>Первые 2 скриншота это топ-2 продавца этого товара, и какие у них метрики. Третий скриншот - это кол-во запросов в месяц
+				этого товара. Четвёртый - объём рынка этого товара. Пятый - это кол-во конкурентов продающих этот товар.</p>
 
-				<ol>
+				<p>Как вы видите, товар очень перспективный, и теперь остаётся просто вложить деньги, и можно запускаться сразу на
+				максимум, т.к. товар практически на 100% зайдет. Ориентировочная прибыль по товару с такими параметрами от 9000$ в
+				месяц, если у вас есть должный бюджет на запуск. Напомним, что хорошим показателем считается, когда вы зарабатываете от
+				50 до 120% чистой прибыли к своим вложениям при распродаже партии товара.</p>
 
-					<li>
-						Не стоит опираться на эмоции и не стоит выбирать продукт, который просто нравится вам. Нужно ориентироваться строго на цифры и никак иначе. Ниже приведем пример, как нужно ориентироваться на цифры. На самом деле ничего сложного в поиске товара нет, если вы просто знаете технологии поиска. <br><br>Итак, вот пример одного перспективного товара, на картинках ниже вы сможете увидеть скришоты из программ аналитики. <br><br>Критерии хорошего продукта: 
+				<p>Перед тем, как начать искать продукт для продажи на Amazon, нужно определиться с категорией, в которой вы будете искать
+				товар. На Amazon есть открытые категории, а есть закрытые категории — в открытых категориях может торговать абсолютно
+				любой человек без каких-либо дополнительных ограничений, а к закрытым категориям нужно получать доступ, чтобы иметь
+				доступ работы в этих категориях. К некоторым закрытым категориям доступ получить не особо трудно, а к некоторым наоборот
+				очень сложно, но для всех новичков желательно начинать с открытых категорий, чтобы не столкнуться ни с какими лишними
+				проблемами — это достаточно важно и при выборе категорий вам нужно обращать внимание, закрытая она или открытая. Мы бы
+				порекомендовали для начала искать товары в следующих категориях: товары для животных; товары для дома и кухни; товары
+				для детей, товары для сада, товары для спорта. Обязательно проверьте, чтобы товар не попадал в категорию Хазмат.</p>
 
-						<ul>
-							<li>низкая себестоимость товара с доставкой до США (желательно менее 20% от конечной стоимости товара);</li>
-							<li>большой спрос на Amazon (более 300 000 потенциальных клиентов в месяц);</li>
-							<li>сравнительно небольшое кол-во конкурентов (желательно до 30);</li>
-							<li>большой объём продаж у конкурентов (от 20 продаж в день в среднем;</li>
-							<li>маленькое количество отзывов у конкурентов (до 500 отзывов в среднем);</li>
-							<li>доход у конкурентов от 500 долларов в день в среднем;</li>
-							<li>популярность товара идёт вверх или находится на хорошем уровне запросов в месяц;</li>
-						</ul>
+				<p>Используйте специальный софт для поиска продукта, для начала мы бы посоветовали разобраться с программами Jungle Scout
+				или AmazeOwl, и обязательно изучить Helium10.</p>
 
-						<br>
-						Вот по таким критериям мы первоначально выбираем товар. Если товар соответствует данным критериям, то мы делаем углубленный анализ, и решаем, стоит вкладываться в эту нишу или нет. <br><br>Первые 2 скриншота это топ-2 продавца этого товара, и какие у них метрики. Третий скриншот - это кол-во запросов в месяц этого товара. Четвёртый - объём рынка этого товара. Пятый - это кол-во конкурентов продающих этот товар. <br><br>Как вы видите, товар очень перспективный, и теперь остаётся просто вложить деньги, и можно запускаться сразу на максимум, т.к. товар 100% зайдет. Сегодня заказали пробники товара с брендингом. Если все ок, то заказываем оптом, и делаем деньги в долларах. Ориентировочная прибыль: от 9000$ в месяц чистыми.
+				<p>Обращайте внимание на вес и объемы товара — от этого зависит стоимость доставки и стоимость хранения товара, и
+				соответственно ваша себестоимость напрямую зависит от этих показателей. Для первого продукта мы рекомендуем вес не
+				больше 500 грамм. Объем продукта не должен визуально превышать размер коробки из под обуви (чем больше объем продукта,
+				тем больше стоимость доставки, и тем больше налоги Amazon за хранение товара на их складе), поэтому, чтобы не ошибиться
+				в расчетах при запуске своего первого продукта — ищите товар минимального объема.</p>
 
-						<div class="images">
-							<img class="img-responsive" src="img/blog/single-find-img-1.jpg" alt="">
-							<img class="img-responsive" src="img/blog/single-find-img-2.jpg" alt="">
-							<img class="img-responsive" src="img/blog/single-find-img-3.jpg" alt="">
-							<img class="img-responsive" src="img/blog/single-find-img-4.jpg" alt="">
-							<img class="img-responsive" src="img/blog/single-find-img-5.jpg" alt="">
-						</div>
+				<p>Не нужно начинать работу с Amazon с трендовыми товарами, которые сейчас на пике. Обычно они быстро выходят из моды,
+				поэтому обязательно нужно проверить товар через Гугл Трендс, чтобы товар пользовался стабильным спросом.</p>
 
-					</li>
+				<p>Чтобы сборы Amazon не съедали всю вашу маржу нужно выбирать товар стоимость не менее 15$, но самый оптимальный диапазон
+				от 25 до 40 долларов. Важное замечание для новичков: не нужно заходить в ниши, где много продавцов производителей, т.к.
+				это может привести к демпингу, из-за которого вы можете уйти в минус из-за снижения цены и увеличения налогов Amazon.</p>
 
-					<br>
+				<p>Обязательно просчитайте финансовую модель проекта в 3 вариантах — оптимистичный расклад (хороший вариант, к которому вы
+				стремитесь), негативный расклад (какие показатели будут у вашего проекта, если всё пойдет очень плохо и произойдет
+				какой-то форс-мажор), средний расклад (результат в котором вы практически на 100% уверены). Чтобы обезопасить себя при
+				выборе первого продукта, нужно чтобы даже при самом негативном раскладе вы хотя бы вышли в ноль или в результат «около
+				нуля». Кстати, обычно когда вы торгуете на новом аккаунте, то распродажа самой первой партии товара обычно не приносит
+				особой прибыли. Помните, что если вы хотите построить бизнес на Amazon, который будет работать долгие годы, то вам нужно плавно раскрутить свой аккаунт, набраться статистики, поэтому первую партию можно продать и в ноль или небольшую прибыль, с целью развития дальнейшей работы.</p>
 
-					<li>Перед тем, как начать искать продукт для продажи на Amazon, нужно определиться с категорией, в которой вы будете искать товар. На Amazon есть открытые категории, а есть закрытые категории — в открытых категориях может торговать абсолютно любой человек без каких-либо дополнительных ограничений, а к закрытым категориям нужно получать доступ, чтобы иметь доступ работы в этих категориях. К некоторым закрытым категориям доступ получить не особо трудно, а к некоторым наоборот очень сложно, но для всех новичков желательно начинать с открытых категорий, чтобы не столкнуться ни с какими лишними проблемами — это достаточно важно и при выборе категорий вам нужно обращать внимание, закрытая она или открытая. <strong>Мы бы порекомендовали для начала искать товары в следующих категориях:</strong> товары для животных; товары для дома и кухни; товары для детей.</li>
+				<p>Выше мы перечислили основные базовые принципы, которых следует придерживаться при выборе продукта для продажи на Amazon.
+				Если продукт соответствует вышеперечисленным требованиям, то стоит просчитать затраты на рекламу, затраты на отзывы,
+				просчитать когда нужно докупать товар и сколько денег понадобится для своевременной дозакупки товара, и т.д., так что
+				перед тем, как начать продавать на Amazon, нужно досконально изучить информацию по поводу выбора товара.</p>
 
-					<br>
-
-					<li>Используйте специальный софт для поиска продукта, для начала мы бы посоветовали разобраться с программами <strong>Jungle Scout или AmazeOwl.</strong></li>
-
-					<br>
-
-					<li>Обращайте внимание на вес и объемы товара — от этого зависит стоимость доставки и стоимость хранения товара, и соответственно ваша себестоимость напрямую зависит от этих показателей. Для первого продукта мы <strong>рекомендуем вес не больше 500 грамм.</strong> Объем продукта не должен визуально превышать размер коробки из под обуви (чем больше объем продукта, тем больше стоимость доставки, и тем больше налоги Amazon за хранение товара на их складе), поэтому, чтобы не ошибиться в расчетах при запуске своего первого продукта — <strong>ищите товар минимального объема.</strong></li>
-
-					<br>
-
-					<li>Не нужно начинать работу с Amazon с трендовыми товара, которые сейчас на пике, но они быстро “выйдут из моды” — <strong>обязательно нужно проверить товар через Гугл Трендс, чтобы товар пользовался стабильным спросом.</strong></li>
-
-					<br>
-
-					<li>Чтобы сборы Amazon не съедали всю вашу маржу нужно выбирать товар стоимость не менее 15$, и <strong>важное замечание — для новичков не нужно заходить в ниши, где много продавцов производителей</strong>, т.к. это может привести к демпингу, из-за которого вы можете уйти в минус из-за снижения цены и увеличения налогов Amazon.</li>
-
-					<br>
-
-					<li>Обязательно просчитайте финансовую модель проекта в 3 вариантах — оптимистичный расклад (хороший вариант, к которому вы стремитесь), негативный расклад (какие показатели будут у вашего проекта, если всё пойдет очень плохо и произойдет какой-то форс-мажор), средний расклад (результат в котором вы практически на 100% уверены). <strong>Чтобы обезопасить себя при выборе первого продукта, нужно чтобы даже при самом негативном раскладе вы хотя бы вышли в ноль или в результат «около нуля».</strong></li>
-
-				</ol>
-
-				<p>Выше мы перечислили основные базовые принципы, которых следует придерживаться при выборе продукта для продажи на Amazon, если продукт соответствует вышеперечисленным требованиям, то стоит просчитать затраты на рекламу, затраты на отзывы, просчитать когда нужно докупать товар и сколько денег понадобится для своевременной дозакупки товара, и т.д., так что перед тем, как начать продавать на Amazon нужно досконально изучить информацию по поводу выбора товара</p>
+				<div class="images">
+					<img class="img-responsive" src="img/blog/single-find-img-1.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-2.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-3.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-4.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-5.jpg" alt="images">
+				</div>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
